Fixing button overflow outside their parent's grid by making the width fixed 100% from the 1fr / in Portfolio component

--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -33,6 +33,14 @@
   gap: 1rem;
   margin: 1rem;
 }
+
+.portfolio__item__cta a {
+  width: 100%;
+  text-align: center;
+}
+
+/* -------- Media Queries (x Medium) ---------*/
+
 @media screen and (max-width: 1200px) {
   .portfolio__item__cta {
     grid-template-columns: 1fr;
